tests/ui/diagnostic_namespace/do_not_recommend/unstable-feature.next.stderr
error: unknown diagnostic attribute
  --> $DIR/unstable-feature.rs:7:15
   |
LL | #[diagnostic::do_not_recommend]
   |               ^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unstable-feature.rs:4:9
   |
LL | #![deny(unknown_or_malformed_diagnostic_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

